<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilesActivity">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logga" />

    <LinearLayout
        android:id="@+id/availableFilesList"
        android:layout_width="395dp"
        android:layout_height="246dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo"></LinearLayout>

    <Switch
        android:id="@+id/switchPublic"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="24dp"
        android:checked="false"
        android:text="@string/togglePublic"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/availableFilesList"
        tools:checked="false" />

    <Button
        android:id="@+id/buttonDownload"
        android:layout_width="95dp"
        android:layout_height="48dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="16dp"
        android:background="#1a74a8"
        android:text="@string/files_btnDelete"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonDelete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchPublic" />

    <Button
        android:id="@+id/buttonDelete"
        android:layout_width="189dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/files_btnDownload"
        android:textAllCaps="false"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/buttonDownload"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchPublic" />

</android.support.constraint.ConstraintLayout>
